--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MokshDBMS Login</title>
-  <link rel="stylesheet" href="assets/index.css">
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
   <div class="animated-bg">
@@ -29,6 +29,6 @@
     <button id="backBtn">Back</button>
   </div>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
-  <script src="assets/app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
