--- a/home.html
+++ b/home.html
@@ -25,6 +25,6 @@
   </div>
   <div class="table-container" id="tableContainer"></div>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
-  <script src="assets/home.js"></script>
+  <script src="home.js"></script>
 </body>
 </html>
